--- a/index.ipynb
+++ b/index.ipynb
@@ -739,7 +739,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your function here\n"
+    "#Your function here'# df['Random'] = df['Year'].map(lambda x: np.random.rand())\n",
+    "# df = df.sort_values(by='Random')\n"
    ]
   },
   {
