Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -739,8 +739,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your function here'# df['Random'] = df['Year'].map(lambda x: np.random.rand())\n",
-    "# df = df.sort_values(by='Random')\n"
+    "#Your function here'# \n",
+    "df['Random'] = df['Year'].map(lambda x: np.random.rand())\n",
+    "df = df.sort_values(by='Random')\n"
    ]
   },
   {
