Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -747,11 +747,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21    0.080478\n",
+       "29    0.090515\n",
+       "6     0.175071\n",
+       "26    0.175778\n",
+       "13    0.215520\n",
+       "Name: Random, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df"
+    "df['Random'].head()"
    ]
   },
   {
