Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -747,27 +747,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>domgross</th>\n",
+       "      <th>title</th>\n",
+       "      <th>Response_Json</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>Metascore</th>\n",
+       "      <th>imdbVotes</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Random</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>100000000</td>\n",
+       "      <td>107518682</td>\n",
+       "      <td>Epic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>52</td>\n",
+       "      <td>92389</td>\n",
+       "      <td>8.146860e+07</td>\n",
+       "      <td>0.080478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>30000000</td>\n",
+       "      <td>4167493</td>\n",
+       "      <td>Gloria</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.783223e+07</td>\n",
+       "      <td>0.090515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>92000000</td>\n",
+       "      <td>67349198</td>\n",
+       "      <td>A Good Day to Die Hard</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>28</td>\n",
+       "      <td>180585</td>\n",
+       "      <td>8.545563e+07</td>\n",
+       "      <td>0.175071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>150000000</td>\n",
+       "      <td>393050114</td>\n",
+       "      <td>Frozen</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>74</td>\n",
+       "      <td>483555</td>\n",
+       "      <td>2.242330e+08</td>\n",
+       "      <td>0.175778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>18000000</td>\n",
+       "      <td>33345833</td>\n",
+       "      <td>Blue Jasmine</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>78</td>\n",
+       "      <td>170986</td>\n",
+       "      <td>6.068826e+07</td>\n",
+       "      <td>0.215520</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "21    0.080478\n",
-       "29    0.090515\n",
-       "6     0.175071\n",
-       "26    0.175778\n",
-       "13    0.215520\n",
-       "Name: Random, dtype: float64"
+       "       budget   domgross                   title  Response_Json  Year  \\\n",
+       "21  100000000  107518682                    Epic              0  2013   \n",
+       "29   30000000    4167493                  Gloria              0  1980   \n",
+       "6    92000000   67349198  A Good Day to Die Hard              0  2013   \n",
+       "26  150000000  393050114                  Frozen              0  2013   \n",
+       "13   18000000   33345833            Blue Jasmine              0  2013   \n",
+       "\n",
+       "    imdbRating  Metascore  imdbVotes         Model    Random  \n",
+       "21         6.7         52      92389  8.146860e+07  0.080478  \n",
+       "29         7.1          0          0 -1.783223e+07  0.090515  \n",
+       "6          5.3         28     180585  8.545563e+07  0.175071  \n",
+       "26         7.5         74     483555  2.242330e+08  0.175778  \n",
+       "13         7.3         78     170986  6.068826e+07  0.215520  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Random'].head()"
+    "df.head()"
    ]
   },
   {
