--- a/index.ipynb
+++ b/index.ipynb
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -785,91 +785,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>100000000</td>\n",
-       "      <td>107518682</td>\n",
-       "      <td>Epic</td>\n",
+       "      <th>5</th>\n",
+       "      <td>225000000</td>\n",
+       "      <td>38362475</td>\n",
+       "      <td>47 Ronin</td>\n",
        "      <td>0</td>\n",
        "      <td>2013</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>52</td>\n",
-       "      <td>92389</td>\n",
-       "      <td>8.146860e+07</td>\n",
-       "      <td>0.080478</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>30000000</td>\n",
-       "      <td>4167493</td>\n",
-       "      <td>Gloria</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.783223e+07</td>\n",
-       "      <td>0.090515</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>92000000</td>\n",
-       "      <td>67349198</td>\n",
-       "      <td>A Good Day to Die Hard</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>5.3</td>\n",
+       "      <td>6.3</td>\n",
        "      <td>28</td>\n",
-       "      <td>180585</td>\n",
-       "      <td>8.545563e+07</td>\n",
-       "      <td>0.175071</td>\n",
+       "      <td>128766</td>\n",
+       "      <td>1.605898e+08</td>\n",
+       "      <td>0.013089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>150000000</td>\n",
-       "      <td>393050114</td>\n",
-       "      <td>Frozen</td>\n",
+       "      <th>4</th>\n",
+       "      <td>40000000</td>\n",
+       "      <td>95020213</td>\n",
+       "      <td>42</td>\n",
        "      <td>0</td>\n",
        "      <td>2013</td>\n",
        "      <td>7.5</td>\n",
-       "      <td>74</td>\n",
-       "      <td>483555</td>\n",
-       "      <td>2.242330e+08</td>\n",
-       "      <td>0.175778</td>\n",
+       "      <td>62</td>\n",
+       "      <td>74170</td>\n",
+       "      <td>4.151958e+07</td>\n",
+       "      <td>0.058706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>18000000</td>\n",
-       "      <td>33345833</td>\n",
-       "      <td>Blue Jasmine</td>\n",
+       "      <th>28</th>\n",
+       "      <td>60000000</td>\n",
+       "      <td>46000903</td>\n",
+       "      <td>Gangster Squad</td>\n",
        "      <td>0</td>\n",
        "      <td>2013</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>78</td>\n",
-       "      <td>170986</td>\n",
-       "      <td>6.068826e+07</td>\n",
-       "      <td>0.215520</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>40</td>\n",
+       "      <td>188846</td>\n",
+       "      <td>7.125032e+07</td>\n",
+       "      <td>0.085670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>70000000</td>\n",
+       "      <td>25213103</td>\n",
+       "      <td>Escape Plan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>49</td>\n",
+       "      <td>198767</td>\n",
+       "      <td>8.586927e+07</td>\n",
+       "      <td>0.091121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>140000000</td>\n",
+       "      <td>122523060</td>\n",
+       "      <td>G.I. Joe: Retaliation</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>41</td>\n",
+       "      <td>158210</td>\n",
+       "      <td>1.193156e+08</td>\n",
+       "      <td>0.103843</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       budget   domgross                   title  Response_Json  Year  \\\n",
-       "21  100000000  107518682                    Epic              0  2013   \n",
-       "29   30000000    4167493                  Gloria              0  1980   \n",
-       "6    92000000   67349198  A Good Day to Die Hard              0  2013   \n",
-       "26  150000000  393050114                  Frozen              0  2013   \n",
-       "13   18000000   33345833            Blue Jasmine              0  2013   \n",
+       "       budget   domgross                  title  Response_Json  Year  \\\n",
+       "5   225000000   38362475               47 Ronin              0  2013   \n",
+       "4    40000000   95020213                     42              0  2013   \n",
+       "28   60000000   46000903         Gangster Squad              0  2013   \n",
+       "23   70000000   25213103            Escape Plan              0  2013   \n",
+       "27  140000000  122523060  G.I. Joe: Retaliation              0  2013   \n",
        "\n",
        "    imdbRating  Metascore  imdbVotes         Model    Random  \n",
-       "21         6.7         52      92389  8.146860e+07  0.080478  \n",
-       "29         7.1          0          0 -1.783223e+07  0.090515  \n",
-       "6          5.3         28     180585  8.545563e+07  0.175071  \n",
-       "26         7.5         74     483555  2.242330e+08  0.175778  \n",
-       "13         7.3         78     170986  6.068826e+07  0.215520  "
+       "5          6.3         28     128766  1.605898e+08  0.013089  \n",
+       "4          7.5         62      74170  4.151958e+07  0.058706  \n",
+       "28         6.7         40     188846  7.125032e+07  0.085670  \n",
+       "23         6.7         49     198767  8.586927e+07  0.091121  \n",
+       "27         5.8         41     158210  1.193156e+08  0.103843  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
