--- a/index.ipynb
+++ b/index.ipynb
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -785,91 +785,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>225000000</td>\n",
-       "      <td>38362475</td>\n",
-       "      <td>47 Ronin</td>\n",
+       "      <th>7</th>\n",
+       "      <td>12000000</td>\n",
+       "      <td>15323921</td>\n",
+       "      <td>About Time</td>\n",
        "      <td>0</td>\n",
        "      <td>2013</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>28</td>\n",
-       "      <td>128766</td>\n",
-       "      <td>1.605898e+08</td>\n",
-       "      <td>0.013089</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>55</td>\n",
+       "      <td>240087</td>\n",
+       "      <td>5.918637e+07</td>\n",
+       "      <td>0.152271</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>40000000</td>\n",
-       "      <td>95020213</td>\n",
-       "      <td>42</td>\n",
+       "      <th>11</th>\n",
+       "      <td>25000000</td>\n",
+       "      <td>37304874</td>\n",
+       "      <td>August: Osage County</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>58</td>\n",
+       "      <td>75884</td>\n",
+       "      <td>2.987166e+07</td>\n",
+       "      <td>0.152383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5500000</td>\n",
+       "      <td>24477704</td>\n",
+       "      <td>Don Jon</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>66</td>\n",
+       "      <td>208948</td>\n",
+       "      <td>5.544622e+07</td>\n",
+       "      <td>0.212442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>150000000</td>\n",
+       "      <td>393050114</td>\n",
+       "      <td>Frozen</td>\n",
        "      <td>0</td>\n",
        "      <td>2013</td>\n",
        "      <td>7.5</td>\n",
-       "      <td>62</td>\n",
-       "      <td>74170</td>\n",
-       "      <td>4.151958e+07</td>\n",
-       "      <td>0.058706</td>\n",
+       "      <td>74</td>\n",
+       "      <td>483555</td>\n",
+       "      <td>2.242330e+08</td>\n",
+       "      <td>0.227976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>60000000</td>\n",
-       "      <td>46000903</td>\n",
-       "      <td>Gangster Squad</td>\n",
+       "      <th>24</th>\n",
+       "      <td>17000000</td>\n",
+       "      <td>54239856</td>\n",
+       "      <td>Evil Dead</td>\n",
        "      <td>0</td>\n",
        "      <td>2013</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>40</td>\n",
-       "      <td>188846</td>\n",
-       "      <td>7.125032e+07</td>\n",
-       "      <td>0.085670</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>70000000</td>\n",
-       "      <td>25213103</td>\n",
-       "      <td>Escape Plan</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>49</td>\n",
-       "      <td>198767</td>\n",
-       "      <td>8.586927e+07</td>\n",
-       "      <td>0.091121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>140000000</td>\n",
-       "      <td>122523060</td>\n",
-       "      <td>G.I. Joe: Retaliation</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>41</td>\n",
-       "      <td>158210</td>\n",
-       "      <td>1.193156e+08</td>\n",
-       "      <td>0.103843</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>57</td>\n",
+       "      <td>139940</td>\n",
+       "      <td>4.076999e+07</td>\n",
+       "      <td>0.255259</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       budget   domgross                  title  Response_Json  Year  \\\n",
-       "5   225000000   38362475               47 Ronin              0  2013   \n",
-       "4    40000000   95020213                     42              0  2013   \n",
-       "28   60000000   46000903         Gangster Squad              0  2013   \n",
-       "23   70000000   25213103            Escape Plan              0  2013   \n",
-       "27  140000000  122523060  G.I. Joe: Retaliation              0  2013   \n",
+       "       budget   domgross                 title  Response_Json  Year  \\\n",
+       "7    12000000   15323921            About Time              0  2013   \n",
+       "11   25000000   37304874  August: Osage County              0  2013   \n",
+       "18    5500000   24477704               Don Jon              0  2013   \n",
+       "26  150000000  393050114                Frozen              0  2013   \n",
+       "24   17000000   54239856             Evil Dead              0  2013   \n",
        "\n",
        "    imdbRating  Metascore  imdbVotes         Model    Random  \n",
-       "5          6.3         28     128766  1.605898e+08  0.013089  \n",
-       "4          7.5         62      74170  4.151958e+07  0.058706  \n",
-       "28         6.7         40     188846  7.125032e+07  0.085670  \n",
-       "23         6.7         49     198767  8.586927e+07  0.091121  \n",
-       "27         5.8         41     158210  1.193156e+08  0.103843  "
+       "7          7.8         55     240087  5.918637e+07  0.152271  \n",
+       "11         7.2         58      75884  2.987166e+07  0.152383  \n",
+       "18         6.6         66     208948  5.544622e+07  0.212442  \n",
+       "26         7.5         74     483555  2.242330e+08  0.227976  \n",
+       "24         6.5         57     139940  4.076999e+07  0.255259  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
